# gaupro

./: .gitignore  CMakeLists.txt  Sources.cmake  gaupro.kdev4
.kdev4/: gaupro.kdev4
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
libgp/include/: cg.h  cov.h  gp.h  rprop.h  solver.hpp
libgp/src/: c_interface.cpp  cg.cc  cov.cc  cov_factory.cc  cov_se_ard.cc  cov_sum.cc  gp.cc  rprop.cc  solver.cpp
optimizer/src/: BfgsSolver.cpp  ConjugateGradientSolver.cpp  GradientDescentSolver.cpp  ISolver.cpp  ISolver.h  Irpropminus.cpp  Irpropminus.h  Irpropplus.cpp  Irpropplus.h  LbfgsSolver.cpp  Meta.h  Rprop.cpp  Rprop.h  unittests.cpp
python/: gaupro.py  gaupro2.py
